Fix images getting cut off when many are added

--- a/app/assets/stylesheets/note.css
+++ b/app/assets/stylesheets/note.css
@@ -201,12 +201,12 @@
 #note-image-list {
   margin-top: 10px;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  height: 100%;
   overflow: auto;
 }
+
 .note-image {
+  float: left;
   width: 100%;
   margin-top: 10px;
 }
@@ -216,8 +216,9 @@
 }
 
 .note-image img {
-  width: 100%;
-  box-shadow: 1px 2px 3px 1px rgba(45,42,42,0.75);
+  width: 90%;
+  margin-left: 10px;
+  box-shadow: 0px 0px 10px  rgba(45,42,42,1.0);
 }
 
 /*Note Splash*/
